Fix contrast ratio

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -620,7 +620,7 @@ mark {
 
 .post__meta {
 	font-size: .875rem;
-	color: #888;
+	color: #999;
 }
 
 .post__meta-published,
